-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 1.4.0
-
Fix Version/s: None
-
Component/s: guththila
-
Labels:None
-
Environment:Linux + windows
Guththila fails handling following type of XML.
<ns1:image p:contentType="image/jpeg" xmlns="http://www.w3.org/2004/06/xmlmime">
<xop:Include xmlns:xop="http://www.w3.org/2004/08/xop/include" href="cid:myid1"></xop:Include>
</ns1:image>
Note that p:contentType is declared before the xmlns declaration
But whenever the namespace declared earlier to the attribute declaration like this
<ns1:image xmlns="http://www.w3.org/2004/06/xmlmime" p:contentType="image/jpeg">
<xop:Include xmlns:xop="http://www.w3.org/2004/08/xop/include" href="cid:myid1"></xop:Include>
</ns1:image>
It is parsing correctly. But the first xml is correct in syntax, so guththila should be fixed to parse it.