Fixed the issue AXIS2C-1118. Include namespace validation for elements with namespaces declared in the same element.